# winpipe

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: console.rs  logger.rs  main.rs  named_pipe.rs
