[package]
name = "winpipe"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"


[dependencies]
clap = { version = "4", features = ["derive"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_IO",
]
